; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_vmlogrdr.c_vmlogrdr_iucv_message_pending.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_vmlogrdr.c_vmlogrdr_iucv_message_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iucv_path = type { %struct.vmlogrdr_priv_t* }
%struct.vmlogrdr_priv_t = type { i32, i32, i32 }
%struct.iucv_message = type { i32 }

@read_wait_queue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iucv_path*, %struct.iucv_message*)* @vmlogrdr_iucv_message_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vmlogrdr_iucv_message_pending(%struct.iucv_path* %0, %struct.iucv_message* %1) #0 {
  %3 = alloca %struct.iucv_path*, align 8
  %4 = alloca %struct.iucv_message*, align 8
  %5 = alloca %struct.vmlogrdr_priv_t*, align 8
  store %struct.iucv_path* %0, %struct.iucv_path** %3, align 8
  store %struct.iucv_message* %1, %struct.iucv_message** %4, align 8
  %6 = load %struct.iucv_path*, %struct.iucv_path** %3, align 8
  %7 = getelementptr inbounds %struct.iucv_path, %struct.iucv_path* %6, i32 0, i32 0
  %8 = load %struct.vmlogrdr_priv_t*, %struct.vmlogrdr_priv_t** %7, align 8
  store %struct.vmlogrdr_priv_t* %8, %struct.vmlogrdr_priv_t** %5, align 8
  %9 = load %struct.vmlogrdr_priv_t*, %struct.vmlogrdr_priv_t** %5, align 8
  %10 = getelementptr inbounds %struct.vmlogrdr_priv_t, %struct.vmlogrdr_priv_t* %9, i32 0, i32 0
  %11 = call i32 @spin_lock(i32* %10)
  %12 = load %struct.vmlogrdr_priv_t*, %struct.vmlogrdr_priv_t** %5, align 8
  %13 = getelementptr inbounds %struct.vmlogrdr_priv_t, %struct.vmlogrdr_priv_t* %12, i32 0, i32 2
  %14 = load %struct.iucv_message*, %struct.iucv_message** %4, align 8
  %15 = call i32 @memcpy(i32* %13, %struct.iucv_message* %14, i32 4)
  %16 = load %struct.vmlogrdr_priv_t*, %struct.vmlogrdr_priv_t** %5, align 8
  %17 = getelementptr inbounds %struct.vmlogrdr_priv_t, %struct.vmlogrdr_priv_t* %16, i32 0, i32 1
  %18 = call i32 @atomic_inc(i32* %17)
  %19 = load %struct.vmlogrdr_priv_t*, %struct.vmlogrdr_priv_t** %5, align 8
  %20 = getelementptr inbounds %struct.vmlogrdr_priv_t, %struct.vmlogrdr_priv_t* %19, i32 0, i32 0
  %21 = call i32 @spin_unlock(i32* %20)
  %22 = call i32 @wake_up_interruptible(i32* @read_wait_queue)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @memcpy(i32*, %struct.iucv_message*, i32) #1

declare dso_local i32 @atomic_inc(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @wake_up_interruptible(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
